# JiPP-2-labs

./: CMakeLists.txt  FAQ-problemy.md  Polimorfizm.cpp  README.md
CSV template/: CsvLib.h
FirstClass/: CMakeLists.txt
FirstClass/include/: FirstClass.h
FirstClass/src/: FirstClass.cpp  FirstClass.h  main.cpp
Niestacjonarne/: Projekt, poprawa.md  Projekt.md  Sala131.md
Niestacjonarne/Lab2/: Lab2.md
Niestacjonarne/Lab3/: Lab3.md
Niestacjonarne/Lab4/: Lab4.md  dataNoQ.csv
Niestacjonarne/Lab5/: Lab5.md
Operaotr/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
Operator/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
Operators/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
Polimorfizm/: Polimorfizm.cpp
Polimorfizm 2/: CMakeLists.txt  Task.h  TaskClass.cpp  TaskClass.h  TaskClassTemplate.h  TaskFunction.cpp  TaskFunction.h  main.cpp
Stacjonarne/: Lab10.1.md  Lab10.md  Lab11.md  Lab12.md  Lab4.md  Lab6.md  Lab7.md  Lab8.md  Lab9.md  Projekt I poprawa.md  ProjektKoncowy.md  Warunki zaliczenia.md
Stacjonarne/Lab1/: Lab1.md  ZadanieDomowe.md
Stacjonarne/Lab10/: Lab10.md  dataQuotes.csv
Stacjonarne/Lab12/: Lab12.md
Stacjonarne/Lab2/: Lab2.md  (+2 more)
Stacjonarne/Lab2/Examples/CallLibrary/: CMakeLists.txt
Stacjonarne/Lab2/Examples/CallLibrary/libs/: CMakeLists.txt
Stacjonarne/Lab2/Examples/CallLibrary/src/: main.cpp
Stacjonarne/Lab3/Examples/ExampleLib/: CMakeLists.txt
Stacjonarne/Lab3/Examples/SimpleLib/App/: CMakeLists.txt  main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
firstClass/: CMakeLists.txt
simpelCalc/: CMakeLists.txt
(+71 files in other folders)
